--- a/app/src/main/res/layout/activity_choose_project.xml
+++ b/app/src/main/res/layout/activity_choose_project.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#F5F5F5"
-    tools:context=".activity.ChooseProjectActivity">
-    <include layout="@layout/actionbar"
-        android:id="@+id/choose_project_actionbar">
-    </include>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/project_list"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/member_list"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:background="#F5F5F5"
+        android:orientation="vertical"
+        tools:context=".activity.ChooseProjectActivity">
+
+        <include
+            android:id="@+id/choose_project_actionbar"
+            layout="@layout/actionbar"></include>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/project_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"></android.support.v7.widget.RecyclerView>
+
+        <com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
+            android:visibility="gone"
+            android:id="@+id/member_plt_choose"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/member_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"></android.support.v7.widget.RecyclerView>
+        </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
+    </LinearLayout>
 </layout>
