--- a/app/src/main/res/layout/item_list_member.xml
+++ b/app/src/main/res/layout/item_list_member.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="memberlist"
-            type="com.aorise.weeklyreport.bean.MemberListBean" />
+            type="com.aorise.weeklyreport.bean.MemberListBean.ListBean" />
         <variable
             name="planTime"
             type="String"/>
