--- a/app/src/main/res/layout/activity_member_manager.xml
+++ b/app/src/main/res/layout/activity_member_manager.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".activity.MemberManagerActivity">
+        tools:context=".activity.ProjectReportManagerActivity">
 
         <include
             android:id="@+id/manager_actionbar"
