--- a/app/src/main/res/layout/activity_project_overview.xml
+++ b/app/src/main/res/layout/activity_project_overview.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".activity.MemberManagerActivity">
+        tools:context=".activity.ProjectReportManagerActivity">
 
         <include
             android:id="@+id/overview_actionbar"
